--- a/SWINIR.ipynb
+++ b/SWINIR.ipynb
@@ -30,24 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "swinir = model.SWINIR(dim = (3, 32, 32), RSTB_nos = 3, STL_nos = 3, window_size = (4, 4), channel_nos = 12, attn_head = 4).to(device)\n"
+    "swinir = model.SWINIR(dim = (3, 32, 32), RSTB_nos = 3, STL_nos = 3, window_size = (4, 4), channel_nos = 8, attn_head = 4).to(device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14336\n"
+      "4308653056\n"
      ]
     },
     {
@@ -85,7 +85,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[-1.1722,  1.0816,  0.6806,  ..., -0.9701, -1.4637,  0.1127],\n",
+       "          [ 1.2503,  0.4973, -0.4432,  ...,  0.9722,  0.9606, -1.2567],\n",
+       "          [ 0.2094,  0.3341, -1.1921,  ...,  1.6313, -1.5400,  0.7561],\n",
+       "          ...,\n",
+       "          [ 1.0012, -0.5629,  0.3839,  ...,  0.1184,  0.5683, -0.5523],\n",
+       "          [-0.0299,  0.5838, -1.3276,  ...,  0.0884,  0.5970,  0.5578],\n",
+       "          [ 0.2637,  0.8616,  1.9324,  ...,  0.4292, -1.7987, -1.9675]],\n",
+       "\n",
+       "         [[-1.5347,  1.4154, -1.3174,  ..., -0.2693,  0.1746,  0.8966],\n",
+       "          [ 0.8050,  2.4466,  0.1406,  ...,  1.0277, -0.9213, -1.4639],\n",
+       "          [-0.9834,  0.6715, -0.6120,  ...,  0.2265,  0.0532,  1.0976],\n",
+       "          ...,\n",
+       "          [-0.6811,  0.2672, -0.1466,  ...,  0.9939,  0.5515,  2.1054],\n",
+       "          [-1.0184,  1.2785, -0.0760,  ..., -1.6847,  1.1358, -0.4729],\n",
+       "          [ 1.0390, -0.6160,  1.4444,  ...,  1.1072,  1.7057,  0.3306]],\n",
+       "\n",
+       "         [[ 0.2616,  1.2516, -0.7437,  ...,  1.5711, -1.0451, -1.6353],\n",
+       "          [-0.3829, -1.1479,  1.8920,  ...,  1.7060, -0.8794, -0.4528],\n",
+       "          [-0.0451, -1.0614, -0.4564,  ...,  0.3166,  0.9358,  0.8643],\n",
+       "          ...,\n",
+       "          [-0.8618, -0.8761,  0.8908,  ...,  0.5403, -1.7982, -0.3978],\n",
+       "          [-1.9316, -1.8260, -0.0033,  ..., -0.5303, -0.1145,  0.3063],\n",
+       "          [-0.4461, -0.0122, -0.8498,  ...,  0.0737,  0.1009, -1.2688]],\n",
+       "\n",
+       "         ...,\n",
+       "\n",
+       "         [[-1.8217, -1.4862,  0.7584,  ..., -0.8869,  0.3905, -0.2250],\n",
+       "          [-0.9605, -0.9744, -1.8309,  ..., -0.5900, -0.5318,  0.1537],\n",
+       "          [-1.2339,  0.1546,  0.3344,  ..., -0.9023,  0.5990, -0.5480],\n",
+       "          ...,\n",
+       "          [-1.5204,  0.5058,  1.0097,  ...,  0.2096,  1.1144, -2.5767],\n",
+       "          [-0.2622,  1.3625, -0.4647,  ...,  1.1643,  0.1694,  1.1076],\n",
+       "          [-0.5163,  0.6590, -2.1695,  ...,  1.5486,  0.5455, -1.3181]],\n",
+       "\n",
+       "         [[-1.2993,  0.7253, -1.0327,  ...,  0.0637,  0.5607,  1.1215],\n",
+       "          [ 1.1659,  1.2734,  1.4511,  ...,  1.7240, -0.2503,  1.2977],\n",
+       "          [-0.5308,  0.9060, -1.1264,  ...,  0.1001, -0.2904, -0.4120],\n",
+       "          ...,\n",
+       "          [ 0.7959, -2.0966, -0.2918,  ..., -1.8409,  1.1644, -0.1007],\n",
+       "          [-0.4851,  2.1993,  0.8374,  ...,  0.2872,  0.7689, -1.1214],\n",
+       "          [ 1.2762,  0.3859,  2.0578,  ..., -2.3253, -1.0626,  0.4020]],\n",
+       "\n",
+       "         [[ 0.5946, -0.9356, -0.4789,  ...,  0.7066,  1.7878, -0.9300],\n",
+       "          [-1.2341, -2.3677,  0.5359,  ..., -0.2297, -0.9704, -1.5829],\n",
+       "          [ 0.9972,  0.6385,  1.2296,  ...,  0.4283, -1.1454,  0.2955],\n",
+       "          ...,\n",
+       "          [-0.7378,  2.1013, -0.5551,  ..., -1.2724, -0.0613,  0.3988],\n",
+       "          [ 1.7355, -2.4998,  1.1976,  ...,  1.8217,  0.7232,  0.1682],\n",
+       "          [ 0.6702, -0.6915,  0.9753,  ..., -1.3192, -0.9433, -0.8661]]]],\n",
+       "       device='cuda:0', grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import STL\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
+    "sw = STL.swin(dim = (8, 32, 32), heads = 4, window_size = (4, 4), device=device)\n",
+    "img = torch.rand((1,8,32,32)).to(device=device)\n",
+    "sw(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
