--- a/SWINIR.ipynb
+++ b/SWINIR.ipynb
@@ -55,7 +55,7 @@
     "torch.cuda.memory_allocated()\n",
     "print(torch.cuda.max_memory_allocated())\n",
     "\n",
-    "img = torch.rand((1,3,32,32)).to(device=device)\n",
+    "img = torch.rand((8,3,32,32)).to(device=device)\n",
     "img = swinir(img)"
    ]
   },
@@ -82,30 +82,266 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[ 0.1034,  0.0614,  0.0467,  ...,  0.0714,  0.0577,  0.0691],\n",
-      "          [ 0.1475,  0.0454,  0.0548,  ...,  0.0977,  0.1093,  0.0414],\n",
-      "          [ 0.0972,  0.1146,  0.0821,  ...,  0.1152,  0.0465,  0.0813],\n",
+      "tensor([[[[ 1.0639e-02, -1.6971e-03, -2.3383e-02,  ..., -3.0603e-02,\n",
+      "           -2.2551e-02,  1.6466e-02],\n",
+      "          [ 4.8504e-02,  5.9397e-02,  5.6965e-02,  ...,  8.6683e-02,\n",
+      "            5.5129e-02,  6.0762e-02],\n",
+      "          [ 3.3199e-02,  1.4357e-02, -3.5626e-03,  ...,  2.4140e-03,\n",
+      "            2.5355e-02,  6.3073e-02],\n",
       "          ...,\n",
-      "          [ 0.0786,  0.0992,  0.0609,  ...,  0.0509,  0.0541,  0.0483],\n",
-      "          [ 0.1283,  0.0977,  0.0716,  ...,  0.0858,  0.0873,  0.0516],\n",
-      "          [ 0.0526,  0.0672,  0.0916,  ...,  0.0585,  0.0525,  0.0526]],\n",
+      "          [ 5.7596e-02,  8.5238e-02,  1.7502e-02,  ...,  1.0540e-02,\n",
+      "            3.1315e-02,  3.6902e-02],\n",
+      "          [ 1.7486e-02,  2.3481e-02, -1.0019e-02,  ...,  3.4963e-02,\n",
+      "           -9.1678e-03,  8.1745e-02],\n",
+      "          [ 5.0408e-02,  7.7275e-02,  8.2107e-02,  ...,  7.0772e-02,\n",
+      "            7.2481e-02,  6.8063e-02]],\n",
       "\n",
-      "         [[ 0.0322,  0.0659,  0.0558,  ...,  0.0466,  0.0623,  0.0351],\n",
-      "          [ 0.0376,  0.0923,  0.0120,  ...,  0.0655,  0.0971,  0.0979],\n",
-      "          [ 0.0400,  0.0165, -0.0262,  ...,  0.0051,  0.1058,  0.0345],\n",
+      "         [[ 4.5996e-02, -9.9654e-03,  2.0323e-02,  ...,  3.7246e-02,\n",
+      "           -3.4436e-02, -2.5262e-02],\n",
+      "          [ 2.4894e-02, -4.4896e-02, -3.6757e-02,  ..., -3.8046e-02,\n",
+      "           -7.9394e-02, -6.6811e-02],\n",
+      "          [ 4.2749e-02, -2.8509e-02,  1.6773e-02,  ...,  4.1480e-02,\n",
+      "           -1.0633e-01, -7.6536e-02],\n",
       "          ...,\n",
-      "          [-0.0014,  0.0310, -0.0192,  ...,  0.1125,  0.0827,  0.0648],\n",
-      "          [ 0.0083, -0.0307,  0.0311,  ...,  0.0175,  0.0643,  0.0617],\n",
-      "          [ 0.0680,  0.0478, -0.0082,  ...,  0.0428,  0.0698,  0.0510]],\n",
+      "          [ 4.7695e-02, -5.1425e-02, -3.4854e-02,  ..., -3.3544e-02,\n",
+      "           -2.4714e-02, -1.1871e-01],\n",
+      "          [ 3.7014e-02, -2.4637e-02,  7.4137e-03,  ..., -3.1188e-02,\n",
+      "            2.7105e-02, -1.2977e-01],\n",
+      "          [ 1.1513e-03, -6.0791e-02, -6.0927e-02,  ..., -4.4221e-02,\n",
+      "           -5.2772e-02, -9.7354e-02]],\n",
       "\n",
-      "         [[-0.0501, -0.0429, -0.0804,  ..., -0.0375, -0.0582, -0.0273],\n",
-      "          [-0.0587, -0.0863, -0.0845,  ..., -0.0813, -0.0711, -0.1342],\n",
-      "          [-0.0927,  0.0348, -0.1286,  ..., -0.0365, -0.0974, -0.0458],\n",
+      "         [[ 2.2554e-01,  1.8283e-01,  1.8393e-01,  ...,  1.7801e-01,\n",
+      "            1.8561e-01,  1.7507e-01],\n",
+      "          [ 2.5952e-01,  2.4925e-01,  2.4412e-01,  ...,  2.5729e-01,\n",
+      "            2.3499e-01,  1.7891e-01],\n",
+      "          [ 2.5794e-01,  2.1834e-01,  2.5214e-01,  ...,  1.7530e-01,\n",
+      "            2.4149e-01,  1.6847e-01],\n",
       "          ...,\n",
-      "          [-0.0396, -0.0192, -0.0438,  ..., -0.0729, -0.0766, -0.0586],\n",
-      "          [-0.0503, -0.0341, -0.0365,  ..., -0.0530, -0.0739, -0.0957],\n",
-      "          [-0.0990, -0.0741, -0.0549,  ..., -0.0829, -0.0922, -0.0816]]]],\n",
-      "       device='cuda:0', grad_fn=<ConvolutionBackward0>) torch.Size([1, 3, 66, 66])\n",
+      "          [ 3.2002e-01,  2.7390e-01,  2.7631e-01,  ...,  2.7530e-01,\n",
+      "            2.8741e-01,  1.6686e-01],\n",
+      "          [ 2.6638e-01,  2.6020e-01,  3.2673e-01,  ...,  2.7239e-01,\n",
+      "            3.0893e-01,  1.5659e-01],\n",
+      "          [ 2.6703e-01,  2.4497e-01,  2.5360e-01,  ...,  2.7963e-01,\n",
+      "            2.4979e-01,  1.7260e-01]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 9.9698e-03,  1.5070e-02, -2.2772e-03,  ..., -4.3603e-02,\n",
+      "           -1.9785e-02,  1.3499e-02],\n",
+      "          [ 4.3579e-02,  5.2687e-02,  6.3694e-02,  ...,  1.0025e-01,\n",
+      "            6.2219e-02,  5.2744e-02],\n",
+      "          [ 6.6056e-02,  4.2322e-02,  5.5414e-03,  ...,  7.8518e-03,\n",
+      "            2.6153e-02,  7.1131e-02],\n",
+      "          ...,\n",
+      "          [ 3.9341e-02,  5.1040e-02,  2.4792e-02,  ...,  1.3504e-02,\n",
+      "            2.8479e-02,  7.0345e-02],\n",
+      "          [ 2.0176e-02,  1.9993e-02, -5.2852e-03,  ...,  6.6347e-02,\n",
+      "            1.1429e-02,  6.2414e-02],\n",
+      "          [ 4.9395e-02,  7.1256e-02,  6.9459e-02,  ...,  5.0957e-02,\n",
+      "            5.6035e-02,  6.9487e-02]],\n",
+      "\n",
+      "         [[ 4.2849e-02, -9.8784e-03,  5.1284e-03,  ...,  5.5494e-02,\n",
+      "           -3.1131e-02, -2.1606e-02],\n",
+      "          [ 3.0163e-02, -3.6956e-02, -1.6978e-02,  ..., -1.3956e-02,\n",
+      "           -7.5205e-02, -5.8246e-02],\n",
+      "          [ 3.9143e-02, -3.2149e-03, -2.2988e-03,  ...,  5.2826e-02,\n",
+      "           -8.3222e-02, -7.9725e-02],\n",
+      "          ...,\n",
+      "          [ 4.9623e-02, -3.5317e-02, -4.6504e-02,  ..., -5.2099e-02,\n",
+      "           -3.7230e-02, -1.3111e-01],\n",
+      "          [ 4.6084e-02, -2.6390e-02, -1.4396e-02,  ..., -5.2850e-02,\n",
+      "           -7.8439e-03, -1.2922e-01],\n",
+      "          [ 2.8810e-03, -4.9025e-02, -5.0424e-02,  ..., -4.4360e-02,\n",
+      "           -3.6991e-02, -8.9564e-02]],\n",
+      "\n",
+      "         [[ 2.2489e-01,  2.0127e-01,  2.0668e-01,  ...,  1.6626e-01,\n",
+      "            1.9539e-01,  1.7138e-01],\n",
+      "          [ 2.5393e-01,  2.4742e-01,  2.5662e-01,  ...,  2.7850e-01,\n",
+      "            2.4083e-01,  1.8454e-01],\n",
+      "          [ 2.7369e-01,  2.6699e-01,  2.3641e-01,  ...,  1.6298e-01,\n",
+      "            2.5877e-01,  1.7161e-01],\n",
+      "          ...,\n",
+      "          [ 3.1278e-01,  2.7634e-01,  2.6607e-01,  ...,  2.4497e-01,\n",
+      "            2.7504e-01,  1.5540e-01],\n",
+      "          [ 2.8660e-01,  2.6946e-01,  2.9672e-01,  ...,  2.7277e-01,\n",
+      "            2.7920e-01,  1.5681e-01],\n",
+      "          [ 2.6658e-01,  2.5758e-01,  2.6546e-01,  ...,  2.7765e-01,\n",
+      "            2.6633e-01,  1.7685e-01]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 2.5638e-03, -9.0417e-03, -1.3906e-02,  ..., -3.7409e-02,\n",
+      "           -1.5679e-02,  1.9149e-02],\n",
+      "          [ 5.7091e-02,  7.1604e-02,  5.8526e-02,  ...,  9.5443e-02,\n",
+      "            4.0634e-02,  5.3443e-02],\n",
+      "          [ 4.6598e-02,  4.5759e-02,  3.9061e-02,  ...,  6.3527e-03,\n",
+      "            3.3023e-02,  6.6865e-02],\n",
+      "          ...,\n",
+      "          [ 5.0874e-02,  8.0220e-02,  3.5804e-02,  ...,  2.6625e-02,\n",
+      "            3.7774e-02,  4.4655e-02],\n",
+      "          [ 2.2316e-02,  2.7369e-02,  1.4139e-02,  ...,  3.6747e-02,\n",
+      "            4.1711e-03,  7.6879e-02],\n",
+      "          [ 5.7077e-02,  7.9179e-02,  6.4973e-02,  ...,  7.2435e-02,\n",
+      "            6.5323e-02,  7.0262e-02]],\n",
+      "\n",
+      "         [[ 4.1228e-02, -8.1511e-03,  1.6285e-02,  ...,  4.1030e-02,\n",
+      "           -2.3064e-02, -2.3955e-02],\n",
+      "          [ 2.3715e-02, -4.6632e-02, -2.8997e-02,  ...,  2.3420e-03,\n",
+      "           -5.5867e-02, -6.7468e-02],\n",
+      "          [ 3.7003e-02, -1.3594e-02,  2.0679e-02,  ...,  6.4773e-02,\n",
+      "           -8.6412e-02, -8.1376e-02],\n",
+      "          ...,\n",
+      "          [ 4.4324e-02, -5.5924e-02, -4.4253e-02,  ..., -3.5070e-02,\n",
+      "           -2.5862e-02, -1.0845e-01],\n",
+      "          [ 3.8549e-02, -2.8913e-02, -1.6336e-02,  ..., -3.8498e-02,\n",
+      "            1.2260e-02, -1.1834e-01],\n",
+      "          [ 1.2626e-03, -5.9530e-02, -5.0026e-02,  ..., -4.7746e-02,\n",
+      "           -4.6520e-02, -9.3397e-02]],\n",
+      "\n",
+      "         [[ 2.2053e-01,  1.8094e-01,  1.9950e-01,  ...,  1.7197e-01,\n",
+      "            1.9680e-01,  1.7473e-01],\n",
+      "          [ 2.6336e-01,  2.5883e-01,  2.4819e-01,  ...,  2.7728e-01,\n",
+      "            2.4481e-01,  1.7554e-01],\n",
+      "          [ 2.4183e-01,  2.5415e-01,  2.6034e-01,  ...,  1.8821e-01,\n",
+      "            2.5658e-01,  1.7470e-01],\n",
+      "          ...,\n",
+      "          [ 3.1618e-01,  2.6969e-01,  2.6417e-01,  ...,  2.5754e-01,\n",
+      "            2.8815e-01,  1.6816e-01],\n",
+      "          [ 2.6735e-01,  2.4720e-01,  2.9242e-01,  ...,  2.5639e-01,\n",
+      "            2.8792e-01,  1.6118e-01],\n",
+      "          [ 2.6929e-01,  2.4420e-01,  2.4922e-01,  ...,  2.6646e-01,\n",
+      "            2.4780e-01,  1.7117e-01]]],\n",
+      "\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "\n",
+      "        [[[ 9.5980e-03,  7.8561e-03,  2.4401e-04,  ..., -4.5555e-02,\n",
+      "           -2.8954e-02,  1.1911e-02],\n",
+      "          [ 4.2632e-02,  5.4336e-02,  3.3925e-02,  ...,  8.9765e-02,\n",
+      "            5.2199e-02,  4.9368e-02],\n",
+      "          [ 4.7782e-02,  3.3489e-02,  6.8045e-03,  ...,  1.8840e-02,\n",
+      "            4.1198e-02,  8.2475e-02],\n",
+      "          ...,\n",
+      "          [ 3.7336e-02,  5.9761e-02,  1.1403e-02,  ...,  2.8525e-02,\n",
+      "            1.9966e-02,  4.8018e-02],\n",
+      "          [ 2.6037e-02,  3.6419e-02, -5.5426e-04,  ...,  5.1075e-02,\n",
+      "            8.7111e-03,  7.6481e-02],\n",
+      "          [ 5.0852e-02,  7.1613e-02,  6.7200e-02,  ...,  6.1239e-02,\n",
+      "            6.1416e-02,  7.1240e-02]],\n",
+      "\n",
+      "         [[ 4.3702e-02, -9.6582e-03,  1.6338e-02,  ...,  3.7469e-02,\n",
+      "           -2.0395e-02, -2.6538e-02],\n",
+      "          [ 3.6783e-02, -4.2257e-02, -1.9217e-02,  ..., -4.0806e-02,\n",
+      "           -6.8822e-02, -6.4146e-02],\n",
+      "          [ 3.8628e-02, -2.8634e-02,  1.0622e-02,  ...,  2.6365e-02,\n",
+      "           -8.2515e-02, -8.3005e-02],\n",
+      "          ...,\n",
+      "          [ 5.0393e-02, -2.9130e-02, -1.9769e-02,  ..., -6.7813e-02,\n",
+      "           -2.6346e-02, -1.1584e-01],\n",
+      "          [ 3.9704e-02, -2.6928e-02,  2.6419e-03,  ..., -5.0840e-02,\n",
+      "            1.5358e-02, -1.2543e-01],\n",
+      "          [ 2.4168e-03, -5.1268e-02, -4.5460e-02,  ..., -4.4230e-02,\n",
+      "           -4.2131e-02, -9.6247e-02]],\n",
+      "\n",
+      "         [[ 2.1957e-01,  1.8946e-01,  2.0170e-01,  ...,  1.5541e-01,\n",
+      "            1.9194e-01,  1.7064e-01],\n",
+      "          [ 2.6173e-01,  2.4772e-01,  2.2738e-01,  ...,  2.5584e-01,\n",
+      "            2.4436e-01,  1.7866e-01],\n",
+      "          [ 2.7061e-01,  2.3653e-01,  2.6173e-01,  ...,  1.6618e-01,\n",
+      "            2.4959e-01,  1.8229e-01],\n",
+      "          ...,\n",
+      "          [ 3.0162e-01,  2.8396e-01,  2.8734e-01,  ...,  2.5073e-01,\n",
+      "            2.7870e-01,  1.6260e-01],\n",
+      "          [ 2.7702e-01,  2.6670e-01,  3.2630e-01,  ...,  2.5831e-01,\n",
+      "            2.9196e-01,  1.6109e-01],\n",
+      "          [ 2.6499e-01,  2.5407e-01,  2.6949e-01,  ...,  2.6729e-01,\n",
+      "            2.5962e-01,  1.7302e-01]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 3.5438e-03, -7.9477e-04, -7.1283e-03,  ..., -4.1008e-02,\n",
+      "           -2.0864e-02,  2.0301e-02],\n",
+      "          [ 4.4903e-02,  6.2175e-02,  6.5076e-02,  ...,  7.7783e-02,\n",
+      "            5.0432e-02,  5.9181e-02],\n",
+      "          [ 5.5023e-02,  4.9300e-02,  4.4465e-02,  ..., -1.0886e-03,\n",
+      "            4.6841e-02,  6.1575e-02],\n",
+      "          ...,\n",
+      "          [ 4.8103e-02,  9.8380e-02,  3.8069e-02,  ...,  1.2857e-02,\n",
+      "            3.8162e-03,  4.9141e-02],\n",
+      "          [ 1.7391e-02,  2.1105e-02, -2.0981e-02,  ...,  2.8115e-02,\n",
+      "            1.6616e-02,  7.1689e-02],\n",
+      "          [ 5.7322e-02,  6.4967e-02,  7.4761e-02,  ...,  7.3142e-02,\n",
+      "            6.2410e-02,  7.0300e-02]],\n",
+      "\n",
+      "         [[ 4.1941e-02, -1.2366e-02,  4.0794e-03,  ...,  4.6600e-02,\n",
+      "           -3.2787e-02, -3.3846e-02],\n",
+      "          [ 2.7380e-02, -5.1832e-02, -2.7599e-02,  ..., -1.3957e-02,\n",
+      "           -7.2974e-02, -6.6237e-02],\n",
+      "          [ 3.8203e-02, -2.3211e-02,  1.3054e-03,  ...,  3.2238e-02,\n",
+      "           -1.0659e-01, -7.6565e-02],\n",
+      "          ...,\n",
+      "          [ 4.3856e-02, -4.9713e-02, -2.8517e-02,  ..., -6.8187e-02,\n",
+      "           -2.3405e-02, -1.2380e-01],\n",
+      "          [ 4.6740e-02, -2.4664e-02,  2.3895e-02,  ..., -4.1333e-02,\n",
+      "           -7.6314e-03, -1.2982e-01],\n",
+      "          [ 1.4411e-03, -4.7746e-02, -5.6042e-02,  ..., -5.7466e-02,\n",
+      "           -5.0906e-02, -9.6536e-02]],\n",
+      "\n",
+      "         [[ 2.2705e-01,  1.8283e-01,  1.8867e-01,  ...,  1.7976e-01,\n",
+      "            1.8384e-01,  1.7284e-01],\n",
+      "          [ 2.6497e-01,  2.4619e-01,  2.4133e-01,  ...,  2.5583e-01,\n",
+      "            2.3860e-01,  1.8193e-01],\n",
+      "          [ 2.6697e-01,  2.5340e-01,  2.5007e-01,  ...,  1.7552e-01,\n",
+      "            2.4228e-01,  1.6688e-01],\n",
+      "          ...,\n",
+      "          [ 3.2045e-01,  2.5711e-01,  2.7801e-01,  ...,  2.3072e-01,\n",
+      "            2.6997e-01,  1.5296e-01],\n",
+      "          [ 2.7148e-01,  2.4792e-01,  3.2660e-01,  ...,  2.6856e-01,\n",
+      "            2.8115e-01,  1.5687e-01],\n",
+      "          [ 2.6990e-01,  2.5910e-01,  2.5514e-01,  ...,  2.7049e-01,\n",
+      "            2.5924e-01,  1.7446e-01]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 5.2277e-03, -3.4963e-03, -1.1427e-02,  ..., -4.3435e-02,\n",
+      "           -2.6902e-02,  1.0522e-02],\n",
+      "          [ 4.8487e-02,  6.2165e-02,  6.4843e-02,  ...,  8.8789e-02,\n",
+      "            4.9478e-02,  5.8443e-02],\n",
+      "          [ 4.6116e-02,  4.5359e-02,  2.9475e-02,  ...,  1.1377e-02,\n",
+      "            4.7712e-02,  7.3589e-02],\n",
+      "          ...,\n",
+      "          [ 5.2488e-02,  5.7349e-02,  1.2787e-02,  ...,  6.5431e-03,\n",
+      "            2.7309e-02,  5.2203e-02],\n",
+      "          [ 3.1434e-02,  1.8541e-02, -1.1182e-02,  ...,  4.0416e-02,\n",
+      "           -1.0594e-03,  7.3220e-02],\n",
+      "          [ 6.0384e-02,  8.7565e-02,  6.4208e-02,  ...,  6.1852e-02,\n",
+      "            6.2813e-02,  7.1267e-02]],\n",
+      "\n",
+      "         [[ 4.2605e-02, -1.2418e-02,  1.0729e-02,  ...,  4.4116e-02,\n",
+      "           -2.5944e-02, -2.4199e-02],\n",
+      "          [ 2.4504e-02, -5.1852e-02, -2.5892e-02,  ..., -2.7147e-02,\n",
+      "           -8.5258e-02, -6.1794e-02],\n",
+      "          [ 3.8220e-02, -2.5066e-02,  7.3936e-03,  ...,  6.1881e-02,\n",
+      "           -1.0479e-01, -7.8719e-02],\n",
+      "          ...,\n",
+      "          [ 4.2428e-02, -5.3237e-02, -1.4240e-02,  ..., -2.7624e-02,\n",
+      "           -6.5298e-03, -1.0524e-01],\n",
+      "          [ 3.7906e-02, -2.4316e-02, -3.6536e-03,  ..., -3.4518e-02,\n",
+      "            1.5336e-02, -1.2638e-01],\n",
+      "          [-5.2560e-03, -5.4730e-02, -4.0129e-02,  ..., -3.3753e-02,\n",
+      "           -4.0131e-02, -9.6315e-02]],\n",
+      "\n",
+      "         [[ 2.2506e-01,  1.8226e-01,  1.8932e-01,  ...,  1.6594e-01,\n",
+      "            1.8910e-01,  1.7245e-01],\n",
+      "          [ 2.6221e-01,  2.4287e-01,  2.4116e-01,  ...,  2.6266e-01,\n",
+      "            2.2559e-01,  1.8364e-01],\n",
+      "          [ 2.5182e-01,  2.3666e-01,  2.5419e-01,  ...,  1.7450e-01,\n",
+      "            2.5287e-01,  1.7748e-01],\n",
+      "          ...,\n",
+      "          [ 2.9440e-01,  2.7268e-01,  2.7657e-01,  ...,  2.4677e-01,\n",
+      "            2.9180e-01,  1.6908e-01],\n",
+      "          [ 2.6790e-01,  2.6452e-01,  2.9282e-01,  ...,  2.6541e-01,\n",
+      "            2.8406e-01,  1.5129e-01],\n",
+      "          [ 2.6363e-01,  2.6191e-01,  2.6323e-01,  ...,  2.7797e-01,\n",
+      "            2.6120e-01,  1.7088e-01]]]], device='cuda:0',\n",
+      "       grad_fn=<ConvolutionBackward0>) torch.Size([8, 3, 66, 66])\n",
       "cuda:0\n",
       "cuda\n"
      ]
