--- a/SwinIR_conv.ipynb
+++ b/SwinIR_conv.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms\n",
-    "from model import *\n",
+    "from swinir_modified import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -17,12 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device ='cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "model = SwinIR().to(device=device)"
+    "model = SwinIR().to(device=device)\n",
+    "\n",
+    "img = torch.rand((3,32,32)).to(device=device)\n",
+    "print(model(img))"
    ]
   }
  ],
