--- a/SWINIR.ipynb
+++ b/SWINIR.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "swinir = model.SWINIR(dim = (3,64,64), RSTB_nos = 6, STL_nos = 6, window_size = (8, 8), channel_nos = 180, attn_head = 6, device=device).to(device)\n"
+    "swinir = model.SWINIR(dim = (3,), RSTB_nos = 6, STL_nos = 6, window_size = (8, 8), channel_nos = 180, attn_head = 6, device=device).to(device)\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "566642688\n"
+      "142553088\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
     "torch.cuda.memory_allocated()\n",
     "print(torch.cuda.max_memory_allocated())\n",
     "\n",
-    "img = torch.rand((8,3,64,64)).to(device=device)\n",
+    "img = torch.rand((1,3,128,128)).to(device=device)\n",
     "img = swinir(img)"
    ]
   },
@@ -82,158 +82,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[ 0.0397,  0.0632,  0.1992,  ...,  0.1826,  0.2224,  0.1792],\n",
-      "          [ 0.0156,  0.0374,  0.2078,  ...,  0.2893,  0.1576,  0.2966],\n",
-      "          [-0.0129,  0.0340,  0.2880,  ...,  0.2551,  0.1052,  0.3594],\n",
+      "tensor([[[[ 3.0111e-02,  4.6090e-02, -4.2531e-03,  ..., -2.9543e-01,\n",
+      "            6.2488e-02, -8.7850e-04],\n",
+      "          [-2.4959e-01, -2.1352e-01,  1.0310e-01,  ...,  2.2584e-01,\n",
+      "           -1.5267e-01,  6.9559e-02],\n",
+      "          [ 1.2720e-01,  2.3136e-01,  4.3923e-01,  ..., -6.3281e-01,\n",
+      "            1.2452e-02, -3.2226e-01],\n",
       "          ...,\n",
-      "          [ 0.1339,  0.0631,  0.3669,  ...,  0.2043,  0.0922,  0.2657],\n",
-      "          [ 0.2087, -0.1307,  0.2724,  ...,  0.1365,  0.1761,  0.2534],\n",
-      "          [ 0.2126,  0.1672,  0.2886,  ...,  0.1663,  0.1830,  0.2724]],\n",
+      "          [ 9.8756e-02, -4.1331e-01, -3.2239e-01,  ..., -1.1067e+00,\n",
+      "            2.1672e-02,  1.1364e-01],\n",
+      "          [-3.9977e-01, -5.4751e-01, -9.6686e-02,  ..., -5.8309e-01,\n",
+      "           -8.3201e-02,  8.4383e-02],\n",
+      "          [-2.2387e-01, -1.1760e-01, -1.3703e-02,  ..., -1.1928e-01,\n",
+      "           -1.2416e-01,  1.2816e-01]],\n",
       "\n",
-      "         [[ 0.0530,  0.1581,  0.2248,  ...,  0.2099,  0.1386,  0.0903],\n",
-      "          [ 0.0559,  0.1699,  0.2833,  ...,  0.2418,  0.1049,  0.2582],\n",
-      "          [-0.0234,  0.1747,  0.1586,  ..., -0.0083,  0.1507,  0.0306],\n",
+      "         [[-7.2559e-02, -3.2430e-01, -4.7701e-02,  ..., -2.8971e-01,\n",
+      "           -3.3749e-01,  6.2977e-03],\n",
+      "          [-1.8330e-01,  1.3995e-01, -6.3188e-01,  ...,  2.0196e-01,\n",
+      "            3.9151e-03,  1.4696e-02],\n",
+      "          [-1.6281e-01, -6.5522e-01, -4.4660e-01,  ..., -8.0235e-02,\n",
+      "           -5.1590e-01, -1.1679e-01],\n",
       "          ...,\n",
-      "          [ 0.0196,  0.0487,  0.0769,  ..., -0.0906,  0.1419,  0.1504],\n",
-      "          [ 0.0834, -0.0607,  0.1067,  ..., -0.0277,  0.0604,  0.0105],\n",
-      "          [ 0.0015,  0.0413,  0.0408,  ..., -0.0656, -0.0181,  0.0598]],\n",
+      "          [-2.7400e-01, -2.5046e-01, -1.6240e-01,  ...,  1.9480e-01,\n",
+      "           -5.3686e-01, -8.0744e-01],\n",
+      "          [ 1.6002e-01,  2.7011e-01, -9.6256e-03,  ..., -2.7857e-01,\n",
+      "           -1.7334e-02, -2.8327e-01],\n",
+      "          [ 7.2992e-02, -3.4300e-02, -1.5749e-01,  ..., -4.3536e-01,\n",
+      "            2.0761e-02, -3.5590e-01]],\n",
       "\n",
-      "         [[-0.0992, -0.1171, -0.0768,  ..., -0.1404, -0.0717, -0.1135],\n",
-      "          [-0.0731, -0.0223,  0.0937,  ..., -0.1030, -0.0707, -0.0971],\n",
-      "          [-0.1435, -0.0997, -0.0151,  ..., -0.2045, -0.1698, -0.1247],\n",
+      "         [[ 3.7454e-02,  2.7185e-01,  1.7474e-01,  ...,  1.3305e-02,\n",
+      "            5.2804e-02,  2.3268e-01],\n",
+      "          [ 2.3776e-01,  2.6562e-01,  2.2706e-01,  ...,  5.9296e-01,\n",
+      "            3.2351e-01,  2.9225e-01],\n",
+      "          [-1.6247e-01,  1.8766e-01, -1.5348e-01,  ..., -2.2579e-01,\n",
+      "            3.1735e-01,  1.1501e-01],\n",
       "          ...,\n",
-      "          [-0.1138, -0.1668,  0.0460,  ..., -0.0442, -0.1597, -0.1377],\n",
-      "          [-0.0496, -0.3332,  0.1180,  ..., -0.2091, -0.1764, -0.0729],\n",
-      "          [-0.1395, -0.2072, -0.0946,  ..., -0.0492, -0.1557, -0.1134]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0900,  0.0733,  0.1491,  ...,  0.1832,  0.1837,  0.1861],\n",
-      "          [ 0.0335,  0.1011,  0.1528,  ...,  0.3225,  0.1532,  0.2995],\n",
-      "          [-0.0066,  0.0908,  0.2603,  ...,  0.2335,  0.1616,  0.3137],\n",
-      "          ...,\n",
-      "          [ 0.2089,  0.0660,  0.3498,  ...,  0.1457,  0.0893,  0.2861],\n",
-      "          [ 0.2087, -0.0709,  0.2648,  ...,  0.0954,  0.1961,  0.2568],\n",
-      "          [ 0.2264,  0.1719,  0.3042,  ...,  0.1731,  0.1836,  0.2891]],\n",
-      "\n",
-      "         [[ 0.0451,  0.1535,  0.1992,  ...,  0.1617,  0.1792,  0.1010],\n",
-      "          [ 0.0215,  0.1855,  0.2225,  ...,  0.2661,  0.1128,  0.2338],\n",
-      "          [-0.0531,  0.1841,  0.2452,  ..., -0.0983,  0.0598,  0.0166],\n",
-      "          ...,\n",
-      "          [ 0.0657,  0.0810,  0.0630,  ...,  0.1032,  0.1019,  0.1538],\n",
-      "          [ 0.0177, -0.0109,  0.0642,  ..., -0.0196,  0.0831,  0.0354],\n",
-      "          [ 0.0122,  0.0247,  0.0798,  ..., -0.0101, -0.0244,  0.0410]],\n",
-      "\n",
-      "         [[-0.1081, -0.0922, -0.0627,  ..., -0.1523, -0.0282, -0.1259],\n",
-      "          [-0.0962, -0.0407,  0.1133,  ..., -0.1220, -0.0968, -0.0600],\n",
-      "          [-0.1551, -0.0879,  0.0021,  ..., -0.2472, -0.1781, -0.0925],\n",
-      "          ...,\n",
-      "          [-0.0759, -0.1830, -0.0778,  ...,  0.0126, -0.1452, -0.1268],\n",
-      "          [-0.0505, -0.3086,  0.1593,  ..., -0.2131, -0.1270, -0.0294],\n",
-      "          [-0.1276, -0.2181, -0.1183,  ..., -0.1213, -0.1802, -0.1190]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0839,  0.0922,  0.1692,  ...,  0.1809,  0.2068,  0.1753],\n",
-      "          [ 0.0637,  0.1238,  0.1751,  ...,  0.3096,  0.1210,  0.3084],\n",
-      "          [ 0.0197,  0.0807,  0.2140,  ...,  0.2791,  0.1136,  0.3145],\n",
-      "          ...,\n",
-      "          [ 0.1818,  0.0852,  0.2763,  ...,  0.1489,  0.0997,  0.2517],\n",
-      "          [ 0.2103, -0.0249,  0.2016,  ...,  0.1307,  0.1653,  0.2568],\n",
-      "          [ 0.2010,  0.1955,  0.2567,  ...,  0.1942,  0.1681,  0.2892]],\n",
-      "\n",
-      "         [[ 0.0350,  0.1102,  0.1981,  ...,  0.2091,  0.1435,  0.0889],\n",
-      "          [ 0.0173,  0.1367,  0.2267,  ...,  0.2625,  0.1589,  0.2713],\n",
-      "          [-0.0370,  0.1634,  0.1314,  ..., -0.0658,  0.1097,  0.0183],\n",
-      "          ...,\n",
-      "          [ 0.0566,  0.0390,  0.0032,  ..., -0.0517,  0.1207,  0.1512],\n",
-      "          [ 0.0560,  0.0221,  0.1596,  ..., -0.0173,  0.0914,  0.0327],\n",
-      "          [-0.0161,  0.0384,  0.0459,  ..., -0.0097, -0.0462,  0.0547]],\n",
-      "\n",
-      "         [[-0.1039, -0.1296, -0.0760,  ..., -0.1476, -0.0728, -0.1267],\n",
-      "          [-0.0988, -0.0713,  0.0630,  ..., -0.1158, -0.0746, -0.0871],\n",
-      "          [-0.1839, -0.1170, -0.0144,  ..., -0.1951, -0.1497, -0.0457],\n",
-      "          ...,\n",
-      "          [-0.1184, -0.1614, -0.1493,  ..., -0.1291, -0.1728, -0.1046],\n",
-      "          [-0.0272, -0.2300,  0.0956,  ..., -0.1423, -0.1267, -0.0718],\n",
-      "          [-0.1466, -0.1791, -0.1490,  ..., -0.0891, -0.1727, -0.0994]]],\n",
-      "\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0998,  0.0736,  0.1100,  ...,  0.1877,  0.2466,  0.1724],\n",
-      "          [ 0.0256,  0.0831,  0.0708,  ...,  0.3878,  0.1592,  0.2690],\n",
-      "          [-0.0139,  0.0563,  0.2484,  ...,  0.3895,  0.1351,  0.2600],\n",
-      "          ...,\n",
-      "          [ 0.2480,  0.0567,  0.3166,  ...,  0.1481,  0.0714,  0.2906],\n",
-      "          [ 0.2502, -0.0590,  0.2110,  ...,  0.1393,  0.1520,  0.2494],\n",
-      "          [ 0.2206,  0.1904,  0.2129,  ...,  0.1883,  0.1984,  0.2698]],\n",
-      "\n",
-      "         [[ 0.0516,  0.1413,  0.1774,  ...,  0.2229,  0.1731,  0.0961],\n",
-      "          [ 0.0254,  0.1917,  0.2900,  ...,  0.2977,  0.0785,  0.2165],\n",
-      "          [-0.0392,  0.1798,  0.1794,  ...,  0.0449,  0.2187,  0.0190],\n",
-      "          ...,\n",
-      "          [ 0.0913,  0.0615, -0.0571,  ..., -0.1188,  0.1541,  0.2001],\n",
-      "          [ 0.0048, -0.0115,  0.0956,  ...,  0.0425,  0.0762,  0.0036],\n",
-      "          [-0.0237,  0.0807, -0.0168,  ..., -0.0515,  0.0200,  0.0487]],\n",
-      "\n",
-      "         [[-0.1109, -0.0862, -0.0775,  ..., -0.1471, -0.0724, -0.1130],\n",
-      "          [-0.0957, -0.0286,  0.0604,  ..., -0.0941, -0.0416, -0.0879],\n",
-      "          [-0.1687, -0.0703, -0.0160,  ..., -0.1304, -0.1450, -0.0796],\n",
-      "          ...,\n",
-      "          [-0.0966, -0.2377, -0.1737,  ..., -0.0532, -0.1875, -0.1439],\n",
-      "          [-0.0372, -0.3035,  0.0926,  ..., -0.1405, -0.1223, -0.0642],\n",
-      "          [-0.1408, -0.2549, -0.2064,  ..., -0.0663, -0.1439, -0.1095]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0734,  0.1039,  0.1185,  ...,  0.1669,  0.2195,  0.1956],\n",
-      "          [-0.0009,  0.0707,  0.1113,  ...,  0.3191,  0.1861,  0.2942],\n",
-      "          [-0.0035,  0.0758,  0.2950,  ...,  0.2770,  0.0998,  0.3132],\n",
-      "          ...,\n",
-      "          [ 0.1843,  0.0763,  0.3328,  ...,  0.0815,  0.0903,  0.2829],\n",
-      "          [ 0.1974, -0.0804,  0.2322,  ...,  0.1315,  0.1588,  0.2661],\n",
-      "          [ 0.2135,  0.1774,  0.2782,  ...,  0.2113,  0.1877,  0.2892]],\n",
-      "\n",
-      "         [[ 0.0478,  0.1616,  0.1555,  ...,  0.1925,  0.1921,  0.1078],\n",
-      "          [ 0.0556,  0.1756,  0.2891,  ...,  0.2645,  0.0749,  0.2146],\n",
-      "          [-0.0072,  0.1204,  0.2009,  ..., -0.0531,  0.1056,  0.0456],\n",
-      "          ...,\n",
-      "          [ 0.0596,  0.0333, -0.0117,  ...,  0.0215,  0.1800,  0.1673],\n",
-      "          [ 0.0513, -0.0270,  0.0992,  ...,  0.0169,  0.1223,  0.0114],\n",
-      "          [-0.0019,  0.0625,  0.0203,  ..., -0.0111, -0.0202,  0.0447]],\n",
-      "\n",
-      "         [[-0.1020, -0.0895, -0.0849,  ..., -0.1418, -0.0744, -0.1317],\n",
-      "          [-0.0828, -0.0583,  0.0309,  ..., -0.1303, -0.0904, -0.0662],\n",
-      "          [-0.1699, -0.0983,  0.0292,  ..., -0.1329, -0.0870, -0.1063],\n",
-      "          ...,\n",
-      "          [-0.1105, -0.2019, -0.1014,  ..., -0.0274, -0.1417, -0.1300],\n",
-      "          [-0.0556, -0.2647,  0.0994,  ..., -0.2187, -0.0997, -0.0552],\n",
-      "          [-0.1427, -0.2317, -0.1372,  ..., -0.0823, -0.1684, -0.1141]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 0.0949,  0.0754,  0.1286,  ...,  0.1695,  0.1988,  0.1769],\n",
-      "          [ 0.0616,  0.0534,  0.0859,  ...,  0.2732,  0.1336,  0.2938],\n",
-      "          [ 0.0382,  0.0137,  0.1875,  ...,  0.2280,  0.0962,  0.3463],\n",
-      "          ...,\n",
-      "          [ 0.1445,  0.0742,  0.4142,  ...,  0.1503,  0.0350,  0.2878],\n",
-      "          [ 0.1883, -0.0829,  0.2757,  ...,  0.1397,  0.1852,  0.2339],\n",
-      "          [ 0.2320,  0.1748,  0.2634,  ...,  0.1541,  0.2084,  0.2687]],\n",
-      "\n",
-      "         [[ 0.0430,  0.1460,  0.1851,  ...,  0.1497,  0.1473,  0.0998],\n",
-      "          [ 0.0196,  0.1497,  0.2379,  ...,  0.1677,  0.0452,  0.2422],\n",
-      "          [-0.0608,  0.1170,  0.1568,  ...,  0.0347,  0.1326,  0.0608],\n",
-      "          ...,\n",
-      "          [ 0.0623,  0.0162,  0.0148,  ..., -0.1360,  0.1435,  0.1696],\n",
-      "          [ 0.0708, -0.0607,  0.1054,  ..., -0.0400,  0.1370,  0.0065],\n",
-      "          [ 0.0205,  0.0623,  0.0418,  ..., -0.0534, -0.0166,  0.0724]],\n",
-      "\n",
-      "         [[-0.1157, -0.0778, -0.0890,  ..., -0.1528, -0.0558, -0.1076],\n",
-      "          [-0.1217, -0.0377,  0.0828,  ..., -0.1213, -0.0701, -0.0803],\n",
-      "          [-0.2098, -0.1519,  0.0469,  ..., -0.3377, -0.1883, -0.1272],\n",
-      "          ...,\n",
-      "          [-0.1226, -0.2145, -0.0726,  ..., -0.0261, -0.1182, -0.1200],\n",
-      "          [-0.0418, -0.2552,  0.0789,  ..., -0.1725, -0.1674, -0.0085],\n",
-      "          [-0.1281, -0.1864, -0.1583,  ..., -0.0941, -0.1206, -0.1359]]]],\n",
-      "       device='cuda:0', grad_fn=<ConvolutionBackward0>) torch.Size([8, 3, 130, 130])\n",
+      "          [ 1.7430e-01,  4.6550e-01,  1.5299e-01,  ...,  5.6132e-01,\n",
+      "            7.6821e-01,  3.9460e-01],\n",
+      "          [ 5.2305e-03,  2.5598e-01,  7.4108e-01,  ..., -3.7153e-01,\n",
+      "            1.7156e-01, -3.2650e-02],\n",
+      "          [ 7.8590e-02,  2.8083e-01,  1.3644e-01,  ...,  6.8663e-02,\n",
+      "            4.1314e-01,  1.5368e-01]]]], device='cuda:0',\n",
+      "       grad_fn=<ConvolutionBackward0>) torch.Size([1, 3, 258, 258])\n",
       "cuda:0\n",
       "cuda\n"
      ]
